checkpoint before guild-to-club rename
